# django-vue-uv

./: .gitignore  README.md  main.py  package.json  pyproject.toml
backend/app/: urls.py
backend/app/database/: db.sqlite3
backend/app/migrations/: 0002_todo_text.py
backend/app/models/: Todo.py
backend/app/serializers/: serializers.py
backend/app/views/: views.py
backend/config/: settings.py  urls.py
backend/todos/: serializers.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: todos.js
frontend/src/components/: HelloWorld.vue
frontend/src/components/Todos/: TodoEditDialog.vue  TodoForm.vue  TodoList.vue
frontend/src/views/: TodosView.vue
frontend/todo-list/: package.json
